--- a/src/main/resources/templates/showEtiquettes.mustache
+++ b/src/main/resources/templates/showEtiquettes.mustache
@@ -5,27 +5,27 @@
 }}
 
 {{>header}}
-		<h1>Les catégories</h1>
+		<h1>Les étiquettes</h1>
 		{{! On appelle l'URL 'add' du contôleur }}
 		<a href='add'>Ajouter une catégorie</a>
 		{{! On affiche un éventuel message d'erreur }}
 		{{#message}}<h3>{{message}}</h3>{{/message}}				
 		<table>
-			<tr><th>Code</th><th>Libellé</th><th>Description</th><th>Action</th></tr>
+			<tr><th>Code</th><th>Libellé</th><th>Action</th></tr>
 			{{! Pour chaque catégorie c dans la liste 'categories' transmise par le contrôleur }}
-			{{#categories}}
+			{{#etiquettes}}
 				<tr>
 					{{! On affiche les informations de la catégorie }}
-					<td>{{code}}</td>
-					<td>{{libelle}}</td>
-					<td>{{description}}</td>
+					<td>{{idEtiquette}}</td>
+					<td>{{intitule}}</td>
+				
 					{{! On affiche un lien vers la page de modification de la catégorie }}
 					<td>
-						<a href='edit?code={{code}}'>Modifier</a> 
-						<a href='delete?code={{code}}'>Supprimer</a>
+						<a href='edit?idEtiquette={{idEtiquette}}'>Modifier</a> 
+						<a href='delete?idEtiquette={{idEtiquette}}'>Supprimer</a>
 					</td>
 				</tr>
-			{{/categories}}
+			{{/etiquettes}}
 		</table>
 		<hr/>
 		<a href="/">Retour au menu</a>
