--- a/src/main/resources/templates/formulairePartenaire.mustache
+++ b/src/main/resources/templates/formulairePartenaire.mustache
@@ -17,18 +17,18 @@
 			<div class="column">
 				<label for="raison-sociale">Raison sociale</label>
 				<input type="text" name="raison-sociale" 
-					{{#partenaire.rasionSociale}} value="{{partenaire.rasionSociale}}" {{/partenaire.rasionSociale}}
+					{{#partenaire.raisonSociale}} value="{{partenaire.raisonSociale}}" {{/partenaire.raisonSociale}}
 					placeholder="Nom de l'entreprise"/>				
-				<label for="description">Adresse:</label>
-				<input type="text" name="description"
+				<label for="adresse">Adresse:</label>
+				<input type="text" name="adresse"
 					{{#partenaire.adresse}} value="{{partenaire.adresse}}" {{/partenaire.adresse}}
 					placeholder="Adresse"/>
-				<label for="description">Téléphone:</label>
-				<input type="text" name="description"
+				<label for="tel">Téléphone:</label>
+				<input type="tel" name="tel"
 					{{#partenaire.telephone}} value="{{partenaire.telephone}}" {{/partenaire.telephone}}
 					placeholder="Adresse"/>
-				<label for="description">Mail:</label>
-				<input type="text" name="description"
+				<label for="mail">Mail:</label>
+				<input type="email" name="mail"
 					{{#partenaire.mailPartenaire}} value="{{partenaire.mailPartenaire}}" {{/partenaire.mailPartenaire}}
 					placeholder="Adresse"/>
 			</div>
