--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,21 +2,25 @@ body{
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;	
 }
 
+table {
+	background-color: azure;
+}
+
 td, th {
-	border: 1px solid #ddd;
+	border: 3px solid #686868;
 	padding: 8px;
 }
 
 tr:nth-child(even){background-color: #f2f2f2;}
 
-tr:hover {background-color: #ddd;}
+th:hover {background-color: #ddd;}
 
 th {
 	padding-top: 12px;
 	padding-bottom: 12px;
 	text-align: left;
-	background-color: #4CAF50;
-	color: white;
+	background-color: #10B0F3;
+	color: black;
 }
 
 .column{
