--- a/src/main/resources/templates/formulaireCommentaire.mustache
+++ b/src/main/resources/templates/formulaireCommentaire.mustache
@@ -25,7 +25,7 @@
 					/>
 				<label for="auteur">Auteur :</label>
 				<input type="text" name="auteur"
-					{{#commentaire.telephone}} value="{{commentaire.telephone}}" {{/commentaire.telephone}}
+					{{#commentaire.auteur}} value="{{commentaire.auteur}}" {{/commentaire.auteur}}
 					/>
 			</div>
 		</form>		
