--- a/src/main/resources/templates/header.mustache
+++ b/src/main/resources/templates/header.mustache
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="../static/annuaire.ico">
+		<link rel="icon" href="../static/ISIS.ico">
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
-		<title>Exemples Spring-MVC avec Mustache</title>
+		<title>Annuaire</title>
 	</head>
 	<body>
