--- a/src/main/resources/templates/listeContacts.mustache
+++ b/src/main/resources/templates/listeContacts.mustache
@@ -1,20 +1,23 @@
 
 {{>header}}
 		<h1>Liste des contacts</h1>
-		<!--<a href='add'>Ajouter une étiquette</a>-->
+		<a href='add'><input type="button" value="Ajouter un contact"></a>
 		{{#message}}<h3>{{message}}</h3>{{/message}}				
 		<table>
-			<tr><th>ID</th><th>Nom</th><th>Prenom</th><th>Mail</th><th>Tel Fixe</th><th>Tel Portable</th><th>Fonction</th><th>Appartenance</th></tr>
+			<tr><th>Nom</th><th>Prenom</th><th>Mail</th><th>Tel Fixe</th><th>Tel Portable</th><th>Fonction</th><th>Action
+			</th></tr>
 			{{#contacts}}
-				<tr>
-					<td>{{idContact}}</td>
+				<tr>					
 					<td>{{nom}}</td>
 					<td>{{prenom}}</td>
-					<td>{{mail}}</td>
-					<td>{{telFixe}}</td>
-					<td>{{telPortable}}</td>
-					<td>{{fonction}}</td>
-					<td>{{partenaire}}</td>					
+					<td>{{#mail}} {{.}} {{/mail}}</td>
+					<td>{{#telFixe}} {{.}} {{/telFixe}}</td>
+					<td>{{#telPortable}} {{.}} {{/telPortable}}</td>
+					<td>{{fonction}}</td>					
+					<td>
+						<a href='edit?idContact={{idContact}}'>Modifier</a> 
+						<a href='delete?idContact={{idContact}}'>Supprimer</a>
+					</td>					
 				</tr>
 			{{/contacts}}
 		</table>		
